enable preview feature